# Boop-GTK

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  convert-icons.sh  flake.nix  librusty_v8.nix  rust-toolchain.toml
.github/: renovate.json  renovate.json5
.github/workflows/: check.yml  ci.yml  convert-icons.yml  release.yml  test.yml
src/: config.rs  executor.rs  main.rs  script.rs  scriptmap.rs
src/ui/: about_dialog.rs  app.rs  command_palette.rs  preferences_dialog.rs  shortcuts_window.rs
