[package]
name = "boop-gtk"
build = "build.rs"
version = "1.8.0"
authors = ["Zoey Sheffield", "Harsh Shandilya <me@msfjarvis.dev>"]
edition = "2018"
description = """A scriptable scratchpad for developers

Port of @IvanMathy's Boop to GTK
"""
license = "MIT"
homepage = "https://boop-gtk.zoey.fyi"
repository = "https://github.com/zoeyfyi/boop-gtk/"
keywords = ["gtk", "text-editor", "editor", "linux", "javascript"]
categories = ["text-editors"]
exclude = [
    "submodules/svg-stroke-to-path", 
]
publish = false

[profile.dev]
lto = "off"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# GTK
glib = "0.10"
gdk = "0.13"
gdk-pixbuf = "0.9"
pango = "0.9"
sourceview = { version = "0.9", features = ["v3_16"] }
# GTK utils
gladis = "0.4.1"
gladis_proc_macro = "0.4.1"
shrinkwraprs = "0.3.0"
# JSON
serde = { version = "1.0", features = ["derive"] }
serde_jsonrc = "0.1"
toml = "0.8"
# Logging
log = "0.4.21"
env_logger = "0.11.3"
# Fuzzy search
fuse-rust = "0.3.2"
# File system
open = "5.1.2"
xdg = "2.5.2"
notify = "6.1.1"
config = "0.14"
# Misc utils
lazy_static = "1.4.0"
once_cell = "1.19.0"
rust-embed = { version = "8.3.0", features = ["debug-embed"] }
dirty2 = "0.1.0"
eyre = "0.6.12"
color-eyre = "0.6.3"
crossbeam = "0.8.4"
fs_extra = "1.3.0"
v8 = "0.89.0"

[dependencies.gtk]
version = "0.9"
features = ["v3_22"]

[dependencies.gio]
version = "0.9"
features = ["v2_44"]

[dev-dependencies]
tempfile = "3.10.1"
directories = "5.0.1" # TODO: remove

[build-dependencies]
fs_extra = "1.3.0"
